--- a/frontend/src/components/ChatDropdown/DropdownMenu.css
+++ b/frontend/src/components/ChatDropdown/DropdownMenu.css
@@ -1,8 +1,8 @@
 .dropdown-menu {
     height: 420px;
-    width: 350px;
-    background-color: #ffffff;
-    border: 1px solid #ddd;
+    width: 100%;
+    background-color: transparent;
+    border: none;
     border-radius: 4px;
     overflow: hidden;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -12,7 +12,7 @@
 .back-header-wrapper {
     height: auto;
     padding: 6px;
-    background-color: #f6f6f6;
+    /* background-color: #f6f6f6; */
 }
 .back-button {
     display: flex;
@@ -26,7 +26,7 @@
     font-size: 16px;
 }
 .back-button:hover {
-    background-color: #ececec;
+    background-color: #8d8d8d2f;
 }
 .custom-divider {
     border-bottom: 1px solid rgb(236, 236, 236);
@@ -48,7 +48,7 @@
     box-sizing: border-box; /* Ensure padding/margins are included in width calculation */
 }
 .menu-items li:hover {
-    background-color: #f0f0f0;
+    background-color: #8d8d8d2f;
 }
 
 .sub-items-menu-contaier {
@@ -66,6 +66,7 @@
     flex-direction: column;
     gap: 8px;
     height: 100%;
+    padding: 2px;
     width: 100%; /* Ensure the container takes the full width */
     overflow-x: hidden; /* Prevent horizontal overflow */
 }
