--- a/frontend/src/components/Settings/SettingsBar.css
+++ b/frontend/src/components/Settings/SettingsBar.css
@@ -1,8 +1,7 @@
 .settings-bar {
   width: 100%;
   max-width: 350px;
-  min-height: 350px;
-  padding: 20px;
+  min-height: 550px;
   background: var(--background);
   color: var(--primary-text);
   border-radius: 10px;
@@ -11,7 +10,9 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border: 2px solid rgb(190, 190, 190);
 }
-
+.settings-bar-header {
+  padding: 20px 20px 0px 20px;
+}
 .settings-title {
   font-size: 24px;
   margin-bottom: 20px;
@@ -22,8 +23,6 @@
 .tab-navigation {
   display: flex;
   justify-content: space-around;
-  margin-bottom: 20px;
-  /* border-bottom: 1px solid lightgray; */
   box-shadow: 0 2px 2px -2px rgb(255 255 255 / 49%);
 }
 
@@ -49,7 +48,11 @@
 }
 
 .tab-content {
-  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+
 }
 
 .settings-options {
