Added frame and light switch to control background color

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,9 @@
   --primary-accent: #2EC4B6;
   --secondary-accent: #AC3B61;
   --primary-text: #fffdfb;
+
+  --widget-light: #e8e8e8;
+  --widget-dark: #212121;
 }
 
 body {
