--- a/frontend/src/components/CraftingPage/CraftingPage.module.css
+++ b/frontend/src/components/CraftingPage/CraftingPage.module.css
@@ -8,10 +8,117 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+}
+.buttonFrame {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 75%;
+    width: 100%;
+    border-radius: 12px;
+    background-color: var(--background-light);
+}
+.buttonInnerFrame {
+    display: flex;
+    justify-content: center;
+    justify-items: end;
+    align-items: center;
+    height: 85%;
+    width: 95%;
+    padding: 6px;
+    border-radius: 12px;
+    background-color: var(--widget-light);
 }
 .settingsBarWrapper {
-    flex: 45%;
+    flex: 35%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+.switchContainer {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 11px;
+}
+
+/* From Uiverse.io by AmIt-DasIT */ 
+/* The switch - the box around the slider */
+.lightSwitch {
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    width: 3.5em;
+    height: 2em;
+  }
+  
+  /* Hide default HTML checkbox */
+  .lightSwitch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .switchSlider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #223243;
+    transition: .4s;
+    border-radius: 30px;
+  }
+  
+  .switchSlider:before {
+    position: absolute;
+    content: "";
+    height: 1.4em;
+    width: 1.4em;
+    border-radius: 20px;
+    left: 0.3em;
+    bottom: 0.3em;
+    background-color: #223243;
+    box-shadow: inset 2px -2px 0 1.8px #fff;
+    transition: .4s;
+    animation: anima1 0.3s linear;
+  }
+  
+  @keyframes anima1 {
+    0% {
+      transform: translateX(1.5em);
+    }
+  
+    80% {
+      transform: translateX(-0.3em);
+    }
+  
+    100% {
+      transform: translateX(0em);
+    }
+  }
+  
+  .lightSwitch input:checked + .switchSlider:before {
+    background-color: yellow;
+    box-shadow: none;
+    transform: translateX(1.5em);
+    animation: anima 0.3s linear;
+  }
+  
+  @keyframes anima {
+    0% {
+      transform: translateX(0px)
+    }
+  
+    80% {
+      transform: translateX(1.6em)
+    }
+  
+    100% {
+      transform: translateX(1.4em)
+    }
+  }
