--- a/frontend/src/components/OptionItemsMenu/DropdownMenu.css
+++ b/frontend/src/components/OptionItemsMenu/DropdownMenu.css
@@ -1,18 +1,17 @@
 .dropdown-menu {
-    height: 420px;
+    flex: 1;
     width: 100%;
+    display: flex;
+    flex-direction: column;
     background-color: transparent;
     border: none;
     border-radius: 4px;
     overflow: hidden;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 .back-header-wrapper {
-    height: auto;
     padding: 6px;
-    /* background-color: #f6f6f6; */
 }
 .back-button {
     display: flex;
@@ -24,9 +23,10 @@
     width: 80px;
     margin: 6px;
     font-size: 16px;
+    transition: background-color 0.3s ease;
 }
 .back-button:hover {
-    background-color: #8d8d8d2f;
+    background-color: rgba(141, 141, 141, 0.18);
 }
 .custom-divider {
     border-bottom: 1px solid rgb(236, 236, 236);
@@ -48,7 +48,12 @@
     box-sizing: border-box; /* Ensure padding/margins are included in width calculation */
 }
 .menu-items li:hover {
-    background-color: #8d8d8d2f;
+    background-color: rgba(141, 141, 141, 0.18);
+}
+.menu-content, .sub-menu-content {
+    flex: 1;
+    overflow-y: auto;
+    padding: 10px;
 }
 
 .sub-items-menu-contaier {
@@ -56,8 +61,7 @@
     align-items: center;
     justify-content: center;
     padding: 12px;
-    width: 100%; /* Ensure the container takes the full width */
-    overflow-x: hidden; /* Prevent horizontal overflow */
+    overflow-y: auto;
 }
 .sub-item-wrapper {
     display: flex;
