--- a/frontend/src/components/CraftingPanel/craftingPanel.css
+++ b/frontend/src/components/CraftingPanel/craftingPanel.css
@@ -62,6 +62,8 @@
   gap: 15px;
   padding: 12px;
   width: 100%;
+  flex: 1;
+  overflow-y: auto;
 }
 
 .settings-option {
@@ -158,4 +160,28 @@
 .big-option-wrapper {
   padding: 3px;
   flex: 70%;
+}
+
+.text-divider {
+  --text-divider-gap: 0.5rem;
+  display: flex;
+  align-items: center;
+  font-size: 0.9375rem;
+  color: #e3e3e3;
+}
+
+.text-divider::before, .text-divider::after  {
+  content: '';
+  height: 1px;
+  background-color: silver;
+}
+
+.text-divider::before {
+  margin-right: var(--text-divider-gap);
+  flex-grow: 1;
+}
+
+.text-divider::after {
+  margin-left: var(--text-divider-gap);
+  flex-grow: 4;
 }
