Added new font options, and extended update function for nested objects

--- a/frontend/src/components/CraftingPanel/craftingPanel.css
+++ b/frontend/src/components/CraftingPanel/craftingPanel.css
@@ -192,6 +192,15 @@
   padding: 7px;
 }
 
+.font-size-selector {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.p-field {
+  margin-bottom: 1rem;
+}
+
 /* .input-label { */
   /* #TODO
 } */
