--- a/frontend/src/components/CraftingPanel/craftingPanel.css
+++ b/frontend/src/components/CraftingPanel/craftingPanel.css
@@ -79,7 +79,7 @@
   color: var(--primary-text);
 }
 
-.settings-option input[type='text'],
+/* .settings-option input[type='text'],
 .settings-option input[type='range'] {
   padding: 10px;
   border: 2px solid var(--primary-accent);
@@ -88,7 +88,7 @@
   color: var(--primary-text);
   font-size: 16px;
   outline: none;
-}
+} */
 .settings-option input[type='color'] {
   background: none;
   border: none;
@@ -155,11 +155,11 @@
 .small-option-wrapper {
   display: flex;
   justify-content: center;
-  padding: 3px;
+  padding: 5px;
   flex: 30%;
 }
 .big-option-wrapper {
-  padding: 3px;
+  padding: 5px;
   flex: 70%;
 }
 
