Added reset to default button

--- a/frontend/src/components/CraftingPage/CraftingPage.module.css
+++ b/frontend/src/components/CraftingPage/CraftingPage.module.css
@@ -43,8 +43,13 @@
 .switchContainer {
     width: var(--inner-content-width);
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
 }
+.ResetToDefaultButton {
+  color: white;
+}
+
 
 /* From Uiverse.io by AmIt-DasIT */ 
 /* The switch - the box around the slider */
