Added checkbox for image upload

--- a/frontend/src/components/CraftingPanel/craftingPanel.css
+++ b/frontend/src/components/CraftingPanel/craftingPanel.css
@@ -204,3 +204,12 @@
 /* .input-label { */
   /* #TODO
 } */
+
+.checkboxWrapper {
+  display: flex;
+  gap: 7px;
+  align-items: center;
+}
+.iconSectionWrapper {
+  
+}
