--- a/frontend/src/components/OptionItemsMenu/DropdownMenu.css
+++ b/frontend/src/components/OptionItemsMenu/DropdownMenu.css
@@ -51,9 +51,10 @@
     background-color: rgba(141, 141, 141, 0.18);
 }
 .menu-content, .sub-menu-content {
-    flex: 1;
-    overflow-y: auto;
     padding: 10px;
+}
+.sub-menu-container {
+    overflow-y: auto;
 }
 
 .sub-items-menu-contaier {
